Fixed vertical alignment of long choice text in ranking order questions

--- a/dev/scss/sample.scss
+++ b/dev/scss/sample.scss
@@ -1216,7 +1216,7 @@ h3.ui-accordion-header {
 .ChoiceStructure {
   li {
     vertical-align: middle;
-    display: block;
+    display: flex;
   }
 
   input[type=text].RankInput {
